--- a/application/views/scripts/photogalleries/gallery.phtml
+++ b/application/views/scripts/photogalleries/gallery.phtml
@@ -6,3 +6,27 @@ $this->headTitle($this->photoGallery['title']);
 
 $this->headMeta()->appendName('description', $this->photoGallery['description']);
 ?>
+
+		<main>
+            <ol class="breadcrumb text-center blogPostBorder">
+                <li><a href="#">Home</a></li>
+                <li><b>Photos</b></li>
+            </ol>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+						<?php foreach($this->photos as $photo) {;?>
+						<div class="col-sm-6">
+						<div class="blogLists spacing">                          
+							<a href="<?php echo $this->Url($photo);?>" blog-img><img src="<?php echo $this->photoUrl($photo);?>" alt="" class="center-block img-responsive"/></a>
+							
+						</div>
+						</div>
+						
+						<?php }?>
+						
+					</div>
+				</div>
+			</div>
+        </main>
