--- a/application/views/scripts/authors/index.phtml
+++ b/application/views/scripts/authors/index.phtml
@@ -1,2 +1,255 @@
+<?php
 
+$this->headTitle($this->sitemapPage['title']);
+
+?>
+        <main class="bookMain">
+
+            <ol class="breadcrumb text-center">
+                <li><a href="#">Home</a></li>
+                <li><b>Authors</b></li>
+            </ol>
+
+            <!--******************************************
+                     MAIN PRODUCTS-SORTING START
+            ******************************************-->
+            <div class="productSorting text-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <article>
+                                <a href="javascript:void(0)" class="filterProduct">FILTER PRODUCT <span class="fa fa-bars"></span></a>
+                            </article>
+                        </div>
+                        <div class="col-sm-4">
+                            <article>
+                                <p>34,231 results in books</p>
+                            </article>
+                        </div>
+                        <div class="col-sm-4">
+                            <article>
+                                <form class="sorting">
+                                    <select class="text-uppercase">
+                                        <option selected="">DEFALUT SORTING</option>
+                                        <option>Po ceni</option>
+                                        <option>Po autoru</option>
+                                        <option>Po izdavacu</option>
+                                        <option>Po zanru</option>
+                                    </select>
+                                </form>
+
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--******************************************
+                     MAIN PRODUCTS-SORTING END
+            ******************************************-->
+            <section class="filter-wrapper">
+                <form class="formFilter">
+
+                    <p class="firstTitle"><b>FILTER</b></p>
+                    <div id="slider-range"></div>
+                    <p>
+                        <label for="amount">Price</label>
+                        <input type="text" id="amount" readonly style="border:0; color:#000;">
+                    </p>
+                    <ul class="list-unstyled productCategories">    
+                        <li class="titleProduct"><a href="#">PRODUCT CATEGORIES</a>
+                        <li><a href="#">Books</a></li>
+                        <li><a href="#">Textbooks</a></li>
+                        <li><a href="#">Audiobooks</a></li>
+                        <li><a href="#">Magazines</a></li>
+                        <li><a href="#">Movies</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Games</a></li>
+                    </ul>
+                    <ul class="list-unstyled productCategories">    
+                        <li class="titles"><a href="#">New Releases</a>
+                        <li><a href="#">Last 30 days <span class="priceReleases">100,358</span></a></li>
+                        <li><a href="#">Last 90 days <span class="priceReleases">100,358</span></a></li>
+                        <li><a href="#">Coming Soon <span class="priceReleasesLast">100,358</span></a></li>                       
+                    </ul>
+                    <ul class="list-unstyled productCategories">    
+                        <li class="titles"><a href="#">FORMAT</a>
+                        <li><a href="#">Paperback <span class="priceFormat">100,358</span></a></li>
+                        <li><a href="#">Hardcover <span class="priceFormat">100,358</span></a></li>
+                        <li><a href="#">Kindle Edition <span class="priceFormat">100,358</span></a></li>
+                        <li><a href="#">Audible Audtio Edition <span class="priceFormat">100,358</span></a></li>
+                        <li><a href="#">Printed Access Code <span class="priceFormat">100,358</span></a></li>
+                        <li><a href="#">Audio CD <span class="priceFormat">100,358</span></a></li> 
+                        <li><a href="#">Board Boak <span class="priceFormat">100,358</span></a></li>
+                    </ul>
+                    <ul class="list-unstyled productCategories">    
+                        <li class="titles"><a href="#">AUTHOR</a>
+                        <li><a href="#">John Green <span class="priceAuthor">288</span></a></li>
+                        <li><a href="#">J.J. Smith <span class="priceAuthor">3</span></a></li>
+                        <li><a href="#">Laura Hillenbrand <span class="priceAuthor">5</span></a></li>
+                        <li><a href="#">George R.R. Martin <span class="priceAuthor">377</span></a></li>
+                        <li><a href="#">Dean Koontz <span class="priceAuthor">260</span></a></li>
+                        <li><a href="#">Edward Klein <span class="priceAuthor">4</span></a></li> 
+                        <li><a href="#">Donna Tartt <span class="priceAuthor">5</span></a></li>
+                    </ul>
+                    <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
+                    <ul class="list-unstyled productCategories">    
+                        <li class="titles"><a href="#">LENGUAGE</a>
+                        <li><a href="#">ENGLISH <span class="priceAuthor">18,610,000</span></a></li>
+                        <li><a href="#">GERMAN <span class="priceAuthor">2,199,573</span></a></li>
+                        <li><a href="#">FRANCE <span class="priceAuthor">2,185,922</span></a></li>
+                        <li><a href="#">SPANISH <span class="priceAuthor">1,171,681</span></a></li>
+                        <li><a href="#">ITALY <span class="priceAuthor">804,936</span></a></li>
+                        <li><a href="#">UKRAINIAN Klein <span class="priceAuthor">910,814</span></a></li> 
+                        <li><a href="#">CHINESE <span class="priceAuthor">562,811</span></a></li>
+                    </ul>
+                    <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
+                </form>
+            </section>
+			<hr>
+
+
+
+            <!--******************************************
+                            MAIN BESTSELLERS START
+             ******************************************-->
+			<div class="container">
+				<div class="bestsellers clearfix text-center">
+					<h2>All Authors</h2>
+					<?php 
+						foreach($this->authors as $author) {	
+							?>
+								<div class="books">
+									<figure class="center-block">
+										<a href="<?php echo $this->authorUrl($author);?>"><img src="<?php echo $this->authorImgUrl($author);?>" class="img-responsive"></a>
+									</figure>
+									<h4 class="down"><a href="<?php echo $this->authorUrl($author);?>"><b><?php echo $this->escape($author['name']);?></b></a></h4>
+									
+								</div>
+							<?php
+						}
+					?>
+				</div>
+			</div>
+			<hr>
+			
+            <div class="container">
+                <div class="bestsellers clearfix text-center">
+                    <h2>Sale</h2>
+                    <div class="authors">
+                        <figure class="center-block">
+                            <a href="#"><img src="/front/img/authors/bookOrange.png" class="img-responsive"></a>
+                            <span class="sale">SALE</span>
+                        </figure>                  
+                        <h4><a href="#">The Brief Wondrous Life of Oscar Wao</a></h4>
+                        <p><span class="by">by</span> Cormac McCartny</p>
+                        <p class="prise center-block">$1,401.75<a class="shop" href="#"><span ><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
+                    </div>
+                </div>
+            </div>
+
+            <!--******************************************
+                             MAIN BESTSELLERS END
+              ******************************************-->
+
+
+
+            <!--******************************************
+                           MAIN TESTIOMONIALS START
+            ******************************************-->
+            <div class="testimonials">
+                <div class="container">
+                    <h1 class="text-center">Customer testimonials</h1>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <article>
+                                <div class="image ballon center-block">
+                                    <span class="fa fa-quote-right"></span>  
+                                    <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>                                   
+                                </div>   
+                                <div class="ava">
+                                    <img src="/front/img/member1.png" class="img-responsive">
+                                </div>
+                                <div class="cocaCola">
+                                    <h2>Philip Antony Hopking</h2>
+                                    <h3>Coca-Cola</h3>     
+                                </div>                         
+                            </article>
+                        </div>
+                        <div class="col-sm-6">
+                            <article>
+                                <div class="image ballon center-block">
+                                    <span class="fa fa-quote-right"></span>  
+                                    <p>Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam</p>                   
+                                </div>                       
+                                <div class="ava">
+                                    <img src="/front/img/member2.png" class="img-responsive">
+                                </div>
+                                <div class="apple">
+                                    <h2>Steve Jobs</h2>
+                                    <h3>Apple</h3>     
+                                </div>                             
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--******************************************
+                            MAIN TESTIOMONIALS END
+             ******************************************-->
+
+
+
+            <!--******************************************
+                           MAIN FROMBLOG START
+            ******************************************-->
+            <div class="fromBlog">
+                <div class="container">
+                    <h2 class="text-center">From the blog</h2>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <article>
+                                        <figure>
+                                            <a href="#"><img src="/front/img/index-blog-1.png" alt="" class="center-block img-responsive"></a>
+                                        </figure>
+                                    </article>
+                                </div>
+                                <div class="col-sm-8 crasDapubus">
+                                    <article>
+                                        <h3><a href="#">Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</a></h3>
+                                        <p class="comment"><a href="#">12 comments</a></p>
+                                        <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
+                                    </article>                                   
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <figure>
+                                        <a href="#"><img src="/front/img/index-blog-2.png" alt="" class="center-block img-responsive"></a>
+                                        </figure>
+                                </div>
+                                <div class="col-sm-8 crasDapubus">
+                                    <article>
+                                        <h3><a href="#">Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</a></h3>
+                                        <p class="comment"><a href="#">12 comments</a></p>
+                                        <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque</p>
+                                    </article>                                
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <!--******************************************
+                             MAIN FROMBLOG END
+              ******************************************-->      
+        </main>
+        <!--******************************************
+        **********************************************
+                            MAIN END
+        *********************************************
+        *********************************************-->
 
