--- a/application/views/scripts/bookcategories/index.phtml
+++ b/application/views/scripts/bookcategories/index.phtml
@@ -20,10 +20,11 @@ $books = $this->books;
 
 							<div class="container">
 								<div class="bestsellers clearfix text-center">
-									<h2><?php echo $this->escape($category['title']);?></h2>
-									<div class="arrowRight">
+									<h2><?php echo $this->escape($category['title']);?>
+									<div class="arrowRight" style="font-size: 20px; padding-top: 10px;">
 										<a href="<?php echo $this->categoryUrl($category);?>">See all <span class="fa fa-arrow-right"></span></a>
 									</div>
+										</h2>
 									<?php 
 										foreach($books[$category['id']] as $book) {	
 											?>
@@ -32,7 +33,7 @@ $books = $this->books;
 														<a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
 													</figure>
 													<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
-													<p><span class="by">by</span> Stephen King</p>
+													<p><span class="by">by</span> <?php $this->escape($this->author['name']);?></p>
 													<p class="prise center-block"><?php echo $this->escape($book['price']);?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
 												</div>
 											<?php
