--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -48,11 +48,11 @@
                         <div class="col-md-4">
                             <article class="top-menu-first">
                                 <ul class="list-unstyled list-inline text-center">
-                                    <li><a data-toggle="modal" data-target="#modalPrimer" href="#">Online Store</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Delivery</a></li>
-                                    <li><a href="#">FAQS</a></li>
-                                    <li><a href="#">Contacts</a></li>
+<!--                                    <li><a data-toggle="modal" data-target="#modalPrimer" href="#">Online Store</a></li>-->
+                                    <li><a href="<?php echo $this->url(array('controller' => 'about', 'action' => 'index'), 'default', true);?>">About Us</a></li>
+<!--                                    <li><a href="#">Delivery</a></li>
+                                    <li><a href="#">FAQS</a></li>-->
+                                    <li><a href="<?php echo $this->url(array('controller' => 'contact', 'action' => 'index'), 'default', true);?>">Contacts</a></li>
                                 </ul>
                             </article>
                         </div>
@@ -64,7 +64,7 @@
                         </div>
                         <div class="col-md-4">
                             <article class="top-menu-third">
-                                <ul class="list-unstyled list-inline text-center">
+<!--                                <ul class="list-unstyled list-inline text-center">
                                     <li><a href="login.html">Login</a></li>
                                     <li><a href="register.html">Registracija</a></li>
                                     <li class="dropdown">
@@ -75,7 +75,7 @@
                                             <li><a href="#">Log Out</a></li>
                                         </ul>
                                     </li>
-                                </ul>
+                                </ul>-->
                             </article>
                         </div>
                     </div>
@@ -106,10 +106,10 @@
                         <div class="col-xs-6 col-md-4">
                             <article class="text-left middle-second">
                                 <h1>BookShop</h1>
-                                <p>World of books</p>
+<!--                                <p>World of books</p>-->
                             </article>
                         </div>
-                        <div class="col-xs-6 col-md-4 ">
+<!--                        <div class="col-xs-6 col-md-4 ">
                             <div class="row">
                                 <div class="col-sm-6 delivery">
                                     <article class="text-center">
@@ -131,7 +131,7 @@
                                     </article>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
@@ -309,7 +309,7 @@
                             </article>
                         </div>
                     </div>
-                    <p class="text-center developer">Ovaj projekat je realizovan u okviru <a href="http://school.cubes.rs">CUBES SCHOOL</a>. Projekat realozovali: FRONTEND - <a href="#">Nikola Popovic</a> BACKEND - </p>
+                    <p class="text-center developer">Ovaj projekat je realizovan u okviru <a href="http://school.cubes.rs">CUBES SCHOOL</a>. Projekat realozovali: FRONTEND - <a href="#">Nikola Popovic</a> BACKEND - <a href="#">Aleksandar Stevanović</a></p>
                 </div>
             </section>
             <!--******************************************
