--- a/public/front/css/books.css
+++ b/public/front/css/books.css
@@ -99,7 +99,8 @@
     font-size: 13px;
 }
 .menu{
-    padding-top: 20px;
+    background: #4e7f16 none repeat scroll 0 0;
+    padding-top: 5px;
 }
 .dropdown-menu li a:nth-child(1) {
     background: none !important;
@@ -150,9 +151,8 @@
 
 .breadcrumb {
     background-color:transparent;
-    border-top: 3px solid #eaebe7;
-    padding-top: 50px;
-    padding-bottom: 60px;
+    padding-top: 10px;
+    padding-bottom: 50px;
 }
 .breadcrumb > li{
     color: #222222;
@@ -266,7 +266,7 @@
 }
 .bestsellers h2{
     color: #333333;
-    font-size: 24px;
+    font-size: 33px;
     font-weight: 800;
     margin-bottom: 60px;
 }
