--- a/application/views/scripts/photogalleries/gallery.phtml
+++ b/application/views/scripts/photogalleries/gallery.phtml
@@ -19,7 +19,7 @@ $this->headMeta()->appendName('description', $this->photoGallery['description'])
 						<?php foreach($this->photos as $photo) {;?>
 						<div class="col-sm-4">
 						<div class="blogLists spacing">                          
-							<a href="<?php echo $this->Url($photo);?>" blog-img><img src="<?php echo $this->photoUrl($photo);?>" alt="" class="center-block img-responsive"/></a>
+							<a href="#" blog-img><img src="<?php echo $this->photoUrl($photo);?>" alt="" class="center-block img-responsive"/></a>
 							
 						</div>
 						</div>
