--- a/application/views/scripts/authors/author.phtml
+++ b/application/views/scripts/authors/author.phtml
@@ -18,30 +18,11 @@ $this->headTitle($this->sitemapPage['title'])
                             <a href="javascript:void(0)"><p class="text-center artArchitecturePhotography">Art, Architecture & Photography<span class="fa fa-cog"></span></p>
                             </a>
                             <div class="lists">
-                                <h3 class="text-center">Books by Subject</h3>
+                                <h3 class="text-center">All Authors</h3>
                                 <ul class="text-center list-unstyled">
-                                    <?php foreach ($this->categories as $category) {?>
-                                    <li><a href="#"><?php echo $this->escape($category['title']);?></a></li>
+                                    <?php foreach ($this->authors as $author) {?>
+                                    <li><a href="<?php echo $this->authorUrl($author);?>"><?php echo $this->escape($author['name']);?></a></li>
                                     <?php }?>
-                                </ul>
-
-                                <h3 class="text-center">Best Books</h3>
-                                <ul class="text-center list-unstyled">
-                                    <li><a href="#">Art, Architecture & Photo</a></li>
-                                    <li><a href="#">Bibles & Bible Studies</a></li>
-                                    <li><a href="#">Biographies</a></li>
-                                    <li><a href="#">Businiess & Money</a></li>
-                                    <li><a href="#">Children's Books</a></li>
-                                    <li><a href="#">Commputing & Internet</a></li>
-                                    <li><a href="#">Cookbook, Food & Wine</a></li>
-                                    <li><a href="#">Crafts & Hobbies</a></li>
-                                    <li><a href="#">Diet & Health</a></li>
-                                    <li><a href="#">Education & Teaching</a></li>
-                                    <li><a href="#">Fiction & Literature</a></li>
-                                    <li><a href="#">Graphic Novels</a></li>
-                                    <li><a href="#">History</a></li>
-                                    <li><a href="#">Home & Garden</a></li>
-                                    <li><a href="#">Humor</a></li>                              
                                 </ul>
                             </div>
                         </article>
