--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -45,25 +45,25 @@
             <div class="top-menu">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <article class="top-menu-first">
                                 <ul class="list-unstyled list-inline text-center">
 <!--                                    <li><a data-toggle="modal" data-target="#modalPrimer" href="#">Online Store</a></li>-->
-                                    <li><a href="<?php echo $this->url(array('controller' => 'about', 'action' => 'index'), 'default', true);?>">About Us</a></li>
+                                    <li><a href="<?php echo $this->sitemapPageUrl('1');?>"><?php echo $this->sitemapPageShortTitle('1');?></a></li>
 <!--                                    <li><a href="#">Delivery</a></li>
                                     <li><a href="#">FAQS</a></li>-->
-                                    <li><a href="<?php echo $this->url(array('controller' => 'contact', 'action' => 'index'), 'default', true);?>">Contacts</a></li>
+                                    <li><a href="<?php echo $this->sitemapPageUrl('12');?>"><?php echo $this->sitemapPageShortTitle('12');?></a></li>
                                 </ul>
                             </article>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <article class="text-center top-menu-second">
                                 <span class=" glyphicon glyphicon-earphone"></span>
                                 <p>+1-234-567-8901</p>
                             </article>
                         </div>
-                        <div class="col-md-4">
-                            <article class="top-menu-third">
+<!--                        <div class="col-md-4">
+                            <article class="top-menu-third">-->
 <!--                                <ul class="list-unstyled list-inline text-center">
                                     <li><a href="login.html">Login</a></li>
                                     <li><a href="register.html">Registracija</a></li>
@@ -76,8 +76,8 @@
                                         </ul>
                                     </li>
                                 </ul>-->
-                            </article>
-                        </div>
+<!--                            </article>
+                        </div>-->
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                             </article>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <article>
+<!--                            <article>
                                 <h4>INFORMATION</h4>
                                 <div class="row">
                                     <div class="col-sm-6">
@@ -248,7 +248,7 @@
                                         </article>
                                     </div>
                                 </div>
-                            </article>
+                            </article>-->
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <article>
