--- a/application/views/scripts/authors/index.phtml
+++ b/application/views/scripts/authors/index.phtml
@@ -13,7 +13,7 @@ $this->headTitle($this->sitemapPage['title']);
             <!--******************************************
                      MAIN PRODUCTS-SORTING START
             ******************************************-->
-            <div class="productSorting text-center">
+<!--            <div class="productSorting text-center">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
@@ -43,9 +43,9 @@ $this->headTitle($this->sitemapPage['title']);
                     </div>
                 </div>
             </div>
-            <!--******************************************
+            ******************************************
                      MAIN PRODUCTS-SORTING END
-            ******************************************-->
+            ******************************************
             <section class="filter-wrapper">
                 <form class="formFilter">
 
@@ -105,7 +105,7 @@ $this->headTitle($this->sitemapPage['title']);
                     <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
                 </form>
             </section>
-			<hr>
+			<hr>-->
 
 
 
@@ -134,102 +134,7 @@ $this->headTitle($this->sitemapPage['title']);
             <!--******************************************
                              MAIN BESTSELLERS END
               ******************************************-->
-
-
-
-            <!--******************************************
-                           MAIN TESTIOMONIALS START
-            ******************************************-->
-            <div class="testimonials">
-                <div class="container">
-                    <h1 class="text-center">Customer testimonials</h1>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <article>
-                                <div class="image ballon center-block">
-                                    <span class="fa fa-quote-right"></span>  
-                                    <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>                                   
-                                </div>   
-                                <div class="ava">
-                                    <img src="/front/img/member1.png" class="img-responsive">
-                                </div>
-                                <div class="cocaCola">
-                                    <h2>Philip Antony Hopking</h2>
-                                    <h3>Coca-Cola</h3>     
-                                </div>                         
-                            </article>
-                        </div>
-                        <div class="col-sm-6">
-                            <article>
-                                <div class="image ballon center-block">
-                                    <span class="fa fa-quote-right"></span>  
-                                    <p>Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam</p>                   
-                                </div>                       
-                                <div class="ava">
-                                    <img src="/front/img/member2.png" class="img-responsive">
-                                </div>
-                                <div class="apple">
-                                    <h2>Steve Jobs</h2>
-                                    <h3>Apple</h3>     
-                                </div>                             
-                            </article>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--******************************************
-                            MAIN TESTIOMONIALS END
-             ******************************************-->
-
-
-
-            <!--******************************************
-                           MAIN FROMBLOG START
-            ******************************************-->
-            <div class="fromBlog">
-                <div class="container">
-                    <h2 class="text-center">From the blog</h2>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <article>
-                                        <figure>
-                                            <a href="#"><img src="/front/img/index-blog-1.png" alt="" class="center-block img-responsive"></a>
-                                        </figure>
-                                    </article>
-                                </div>
-                                <div class="col-sm-8 crasDapubus">
-                                    <article>
-                                        <h3><a href="#">Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</a></h3>
-                                        <p class="comment"><a href="#">12 comments</a></p>
-                                        <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. </p>
-                                    </article>                                   
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <figure>
-                                        <a href="#"><img src="/front/img/index-blog-2.png" alt="" class="center-block img-responsive"></a>
-                                        </figure>
-                                </div>
-                                <div class="col-sm-8 crasDapubus">
-                                    <article>
-                                        <h3><a href="#">Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</a></h3>
-                                        <p class="comment"><a href="#">12 comments</a></p>
-                                        <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque</p>
-                                    </article>                                
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
-            <!--******************************************
-                             MAIN FROMBLOG END
-              ******************************************-->      
+   
         </main>
         <!--******************************************
         **********************************************
