--- a/application/views/scripts/bookcategories/bookcategory.phtml
+++ b/application/views/scripts/bookcategories/bookcategory.phtml
@@ -13,7 +13,7 @@ $this->headTitle($this->sitemapPage['title']);
             <!--******************************************
                      MAIN PRODUCTS-SORTING START
             ******************************************-->
-            <div class="productSorting text-center">
+<!--            <div class="productSorting text-center">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
@@ -43,9 +43,9 @@ $this->headTitle($this->sitemapPage['title']);
                     </div>
                 </div>
             </div>
-            <!--******************************************
+            ******************************************
                      MAIN PRODUCTS-SORTING END
-            ******************************************-->
+            ******************************************
             <section class="filter-wrapper">
                 <form class="formFilter">
 
@@ -105,7 +105,7 @@ $this->headTitle($this->sitemapPage['title']);
                     <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
                 </form>
             </section>
-			<hr>
+			<hr>-->
 
 
 
@@ -124,7 +124,7 @@ $this->headTitle($this->sitemapPage['title']);
 									</figure>
 									<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
 									<p><span class="by">by</span> Stephen King</p>
-									<p class="prise center-block"><?php echo $this->escape($book['price']);?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
+									<p class="prise center-block"><?php echo $this->escape($book['price']);?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
 								</div>
 							<?php
 						}
