--- a/application/views/scripts/bookcategories/index.phtml
+++ b/application/views/scripts/bookcategories/index.phtml
@@ -34,7 +34,7 @@ $books = $this->books;
 													</figure>
 													<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
 													<p><span class="by">by</span> <?php $this->escape($this->author['name']);?></p>
-													<p class="prise center-block"><?php echo $this->escape($book['price']);?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
+													<p class="prise center-block"><?php echo $this->escape($book['price']);?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
 												</div>
 											<?php
 										}
