--- a/application/views/scripts/photogalleries/gallery.phtml
+++ b/application/views/scripts/photogalleries/gallery.phtml
@@ -8,10 +8,8 @@ $this->headMeta()->appendName('description', $this->photoGallery['description'])
 ?>
 
 		<main>
-            <ol class="breadcrumb text-center blogPostBorder">
-                <li><a href="<?php echo $this->url(array('controller' => 'index'), 'default', true);?>">Home</a></li>
-                <li><b>Photos</b></li>
-            </ol>
+			
+		<?php echo $this->breadCrumbsHtml($this->sitemapPage['id']);?>
 
             <div class="container">
                 <div class="row">
